src/objects/EnrollmentPlan__c.object
<CustomObject>
    <fields>
        <fullName>BaselineNSRVariance__c</fullName>
        <formula>BaselineNSR__c - BaselineNSRatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline NSR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineNSR__c</fullName>
        <description>For the purposes of Deliver To Win only, displays budgeted amount inclusive of mgmt adjustments.  Baseline NSR = Budgeted NSR + NSR Adjustment</description>
        <formula>IF(AND(ISPICKVAL(IncentivePlan__r.ContractType__c,&quot;Time &amp; Material&quot;),ABS(MigratedBaselineNSR__c)&gt;0)
   ,MigratedBaselineNSR__c + NSRAdjustment__c + TotalNSRScopeChange__c
   ,CASE(IncentivePlan__r.ContractType__c,&apos;Fixed Price&apos;
   		 ,IncentiveProject__r.ApprovedNSRBudget__c + NSRAdjustment__c
   		 ,IF
   		 (OR(NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;)), Enrolled__c )
   		    ,ApprovedNSRBudgetatSnapshot__c + NSRAdjustment__c + TotalNSRScopeChange__c
   		    ,IncentiveProject__r.ApprovedNSRBudget__c + NSRAdjustment__c + TotalNSRScopeChange__c
   		 )
   		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For the purposes of Deliver To Win only, displays budgeted amount inclusive of mgmt adjustments.  Baseline NSR = Budgeted NSR + NSR Adjustment</inlineHelpText>
        <label>Baseline NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineNSRatSnapshot__c</fullName>
        <label>Baseline NSR at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineNetMarginVariance__c</fullName>
        <formula>BaselineNetMargin__c - BaselineNetMarginatSnapshot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Net Margin Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineNetMargin__c</fullName>
        <formula>CASE(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, IncentiveProject__r.ApprovedNetMarginBudget__c, &quot;Time &amp; Material&quot;, ApprovedNetMarginBudgetatSnapshot__c ,0)

 + GrossMarginAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Net Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineNetMarginatSnapshot__c</fullName>
        <label>Baseline Net Margin at Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaselineSubsODC__c</fullName>
        <formula>CASE(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;, IncentiveProject__r.ApprovedODCBudget__c + IncentiveProject__r.ApprovedSubsBudget__c, &quot;Time &amp; Material&quot;, IF(
OR(Enrolled__c,NOT(ISPICKVAL(ApplicationType__c,&apos;ENR&apos;))),ApprovedSubsODCatSnapshot__c,IncentiveProject__r.ApprovedODCBudget__c + IncentiveProject__r.ApprovedSubsBudget__c) ,0) 

+ SubsODCsScopeChange__c + SubsODCsAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Subs and ODC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetVariance__c</fullName>
        <formula>IF( (ABS(BaselineGrossMarginCaptured__c - BaselineGrossMargin__c) / BaselineGrossMargin__c) &gt; 0,
    (ABS(BaselineGrossMarginCaptured__c - BaselineGrossMargin__c) / BaselineGrossMargin__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Variance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <formula>IncentiveProject__r.BusinessLineDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTofIPSchedules__c</fullName>
        <label>CNT of IP Schedules</label>
        <summaryForeignKey>Interim_Payment_Schedule__c.EnrollmentApplication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRDSO__c</fullName>
        <label>CR DSO</label>
        <picklist>
            <controllingField>ApplicationType__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMargin__c</fullName>
        <label>CR Margin</label>
        <picklist>
            <controllingField>ApplicationType__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRParticipant__c</fullName>
        <label>CR Participant</label>
        <picklist>
            <controllingField>ApplicationType__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeParticipantAllocationSent__c</fullName>
        <description>Used for WFR, Notify PM (and approver 1) of change in proposed participant allocation</description>
        <inlineHelpText>Used for WFR, Notify PM (and approver 1) of change in proposed participant allocation</inlineHelpText>
        <label>ChangeParticipantAllocationSent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClientSatisfactionCurrent__c</fullName>
        <inlineHelpText>In the future, Ecosystem will store the results of client feedback and surveys, making real-time comparison against your project&apos;s DTW target possible.</inlineHelpText>
        <label>Client Satisfaction (Current)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSatisfactionDisplay__c</fullName>
        <formula>&quot;NPS of 7 or better, Client rating Satisfactory or better&quot;</formula>
        <inlineHelpText>Your DTW client satisfaction target.  Depending on geography, this may be expressed numerically (NPS score).</inlineHelpText>
        <label>Client Satisfaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSatisfactionNPS__c</fullName>
        <defaultValue>&quot;Satisfactory or better&quot;</defaultValue>
        <description>Client satisfaction will be measured with a Net Promotor Score survey.  If unavailable, a client-driven survey may be used, or a local management assessment of client satisfaction will be made.</description>
        <inlineHelpText>Client satisfaction will be measured with a Net Promotor Score survey.  If unavailable, a client-driven survey may be used, or a local management assessment of client satisfaction will be made.</inlineHelpText>
        <label>Client Satisfaction (NPS) Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmBaseline__c</fullName>
        <label>Confirm Baseline</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContingencyAdjustment__c</fullName>
        <description>Management Adjustments based on Expected Scope Changes to Contingency</description>
        <inlineHelpText>Management Adjustments based on Expected Scope Changes to Contingency</inlineHelpText>
        <label>Contingency Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContingencyScopeChange__c</fullName>
        <description>Expected Scope Changes to Contingency</description>
        <inlineHelpText>Expected Scope Changes to Contingency</inlineHelpText>
        <label>Contingency Scope Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContingencyatSnapshot__c</fullName>
        <label>ContingencyatSnapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Displays the contract type as per AECOM Insight.  For Oracle projects, this will reflect the Oracle contract type.  DTW data is updated weekly by Insight.</description>
        <formula>IncentiveProject__r.ContractType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the contract type as per AECOM Insight.  For Oracle projects, this will reflect the Oracle contract type.  DTW data is updated weekly by Insight.</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorpAdminProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corp Admin Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalOwnerTXT__c</fullName>
        <label>CurrentApprovalOwnerTXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CurrentApprovalOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentApproverOwnerName__c</fullName>
        <label>Current Approver Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>IncentiveProject__r.CustomerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPEAdjustment__c</fullName>
        <description>Displays any adjustment input by an approver during the course of the approval process.  An adjustment should be considered if the current approved budget does not reflect the expected performance of the project.  Click for further details about management adjustments.  The DPE Adjustment is added to the DPE Budget to set the DTW Baseline DPE.  An increase to the Budgeted DPE should be input as a positive number.  A decrease to the Budgeted DPE should be input as a negative number.</description>
        <inlineHelpText>Displays any adjustment input by an approver during the course of the approval process. An adjustment should be considered if the current approved budget does not reflect the expected performance of the project.</inlineHelpText>
        <label>DPE Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DPEBudgetAdjustment__c</fullName>
        <formula>TotalNSRManagementAdjustment__c -  GrossMarginAmountAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPE Budget Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DPEBudgetScopeChange__c</fullName>
        <formula>TotalNSRScopeChange__c -  GrossMarginAmountScopeChange__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPE Budget Scope Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSOTarget__c</fullName>
        <description>Displays target Days Sales Outstanding, a measure of the time to collect cash for costs incurred.  For the purposes of Deliver to Win, a target must be set that reflects the billing cycle time, client payment terms, and local cash flow expectations for the project.</description>
        <inlineHelpText>Displays target Days Sales Outstanding, a measure of the time to collect cash for costs incurred.  For the purposes of DTW, a target must be set that reflects the billing cycle time, client payment terms, and local cash flow expectations for the project.</inlineHelpText>
        <label>DSO Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTWAdminID__c</fullName>
        <formula>DTWAdmin__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTWAdminID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWAdminName__c</fullName>
        <description>Back-end field to capture text name to reduce the number of cross-object references in formulas.</description>
        <label>DTW Admin Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTW Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTWCompleteSnapshot__c</fullName>
        <label>DTW % Complete Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DTWCompleteVariance__c</fullName>
        <formula>DTWCompleteSnapshot__c - DTWComplete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTW % Complete Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DTWComplete__c</fullName>
        <description>=ITD Cost at enrollment / (EAC cost at enrollment +(Current Cost Budget - Cost Budget at enrollment))

IF(OR(TEXT(EnrollmentStatus__c) = &quot;Enrolled&quot;, TEXT(EnrollmentStatus__c) = &quot;Archived&quot;),

ActualTotalCostBudgetatSnapshot__c / (ForecastCostBudgetatSnapshot__c +(IncentiveProject__r.ApprovedCostBudget__c - ApprovedCostBudgetatSnapshot__c)), Null)</description>
        <formula>IF(OR(NOT(
ISPICKVAL(ApplicationType__c,&apos;ENR&apos;))
,Enrolled__c)
,ActualTotalCostBudgetatSnapshot__c / (ForecastCostBudgetatSnapshot__c +(IncentiveProject__r.ApprovedCostBudget__c - ApprovedCostBudgetatSnapshot__c)),IncentiveProject__r.ActualTotalCostsITD__c / IncentiveProject__r.ForecastCostBudget__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A DTW metric used while calculating incentives.  It establishes project % complete @ enrollment.  Budget changes after enrollment are incorporated so that it remains true with respect to changes in scope.</inlineHelpText>
        <label>DTW % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DaysFromSchedFinishDate__c</fullName>
        <formula>TODAY() - ScheduledFinishDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Sched Finish Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayApprovalHistory__c</fullName>
        <description>Override to force the Approval History to be displayed even when there are Application Issues.</description>
        <label>Display Approval History</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EACAsofDate__c</fullName>
        <description>Displays the latest EAC update date as per AECOM Insight.  DTW data is updated weekly by Insight.</description>
        <formula>IncentiveProject__r.EACasofDate__c

/*If(TEXT(EmployeeName__r.Status__c)=&quot;Employee - Active&quot;, TEXT(EmployeeName__r.Status__c),
TEXT(EmployeeName__r.Status__c)  &amp; &quot;  &quot; &amp; IMAGE(&quot;/resource/1429552689000/ExclamationMark&quot;, &quot;Alert&quot;, 25, 25))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the latest EAC update date as per AECOM Insight.  DTW data is updated weekly by Insight.</inlineHelpText>
        <label>EAC As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EACDateAge__c</fullName>
        <formula>TODAY()- EACAsofDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAC Date Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAMaxPExp1__c</fullName>
        <label>EA.Max Pool Expression 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAMaxPExp2__c</fullName>
        <label>EA.Max Pool Expression 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EAMaxPF12__c</fullName>
        <label>EA.Max Pool Field 1.2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAMaxPF1__c</fullName>
        <label>EA.Max Pool Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAMaxPF21__c</fullName>
        <label>EA.Max Pool Field 2.1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAMaxPOp1__c</fullName>
        <label>EA.Max Pool Operator1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAMaxPOp2__c</fullName>
        <label>EA.Max Pool Operator2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAMaxPOp__c</fullName>
        <label>EA.Max Pool Operator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAThresholdField1__c</fullName>
        <label>EA.Threshold Field 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAThresholdField2__c</fullName>
        <label>EA.Threshold Field 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEACGMPerformance__c</fullName>
        <description>IF( ForecastGrossMarginofNSR__c &gt;  ThresholdGM__c , &quot;Yes&quot;, &quot;No&quot;)

IF(ForecastGrossMarginofNSR__c &lt; BaselineGMofNSR__c,</description>
        <formula>CASE( IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;,
 IF(Forecast_Margin_of_NSR__c &gt; ThresholdGM__c , &quot;Above Threshold&quot;,
   IF(AND(Forecast_Margin_of_NSR__c &gt; BaselineGMofNSR__c, Forecast_Margin_of_NSR__c &lt;  ThresholdGM__c),  &quot;Below Threshold&quot;,
      &quot;Below Baseline&quot;
)),
IF(Forecast_Margin_of_NSR__c &gt; BaselineGMofNSR__c, &quot;Above Margin&quot;,
   IF(Forecast_Margin_of_NSR__c &lt; BaselineGMofNSR__c,  &quot;Below Margin&quot;,
      NULL
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross or Net Margin % Performance compared to DTW baseline</inlineHelpText>
        <label>EAC Margin % Performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPChanged__c</fullName>
        <label>EP Changed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EligibleforFixedPricePlanAlert__c</fullName>
        <description>ALERT field! Indicates whether the project meets current eligibility requirements for the Fixed Price Plan.</description>
        <formula>IF (
     AND(
         NOT(ISPICKVAL(IncentivePlan__r.ContractType__c, &quot;Fixed Price&quot;)),
          FPPOverallEligibility_c__c = &quot;Yes&quot;
          ),
           FPPOverallEligibility_c__c &amp;&quot; &quot;&amp;IMAGE(&quot;/resource/1429552689000/ExclamationMark&quot;,&quot;Alert&quot;, 20,20), 
           FPPOverallEligibility_c__c
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the project meets current eligibility requirements for the Fixed Price Plan.</inlineHelpText>
        <label>Eligible for Fixed Price Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibleforTMPlanAlert__c</fullName>
        <description>ALERT! Indicates whether the project meets current eligibility requirements for the T&amp;M Price Plan.</description>
        <formula>IF (
     AND(
         NOT(ISPICKVAL(IncentivePlan__r.ContractType__c, &quot;Time &amp; Material&quot;)),
          TMPlanOverallEligibility__c  = &quot;Yes&quot;
          ),
           TMPlanOverallEligibility__c &amp;&quot; &quot;&amp;IMAGE(&quot;/resource/1429552689000/ExclamationMark&quot;,&quot;Alert&quot;, 20,20), 
           TMPlanOverallEligibility__c
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the project meets current eligibility requirements for the T&amp;M Price Plan.</inlineHelpText>
        <label>Eligible for T&amp;M Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollmentApplicationNameUnique__c</fullName>
        <description>Refer to US-01142, created to enforce uniqueness and prevent duplication.</description>
        <label>Enrollment Application Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentMetrics__c</fullName>
        <description>HYPERLINK(&apos;/APEX/INC_ShowEnrollmentMetrics/?id=&apos;{!Id}, IMAGE(&quot;/img/msg_icons/ Icons&quot;, &quot;error24.png&quot;))</description>
        <formula>IF( ISPICKVAL(MetricWarningActive__c, &quot;Yes&quot;) , HYPERLINK(&quot;/apex/INC_ShowEnrollmentMetrics?id=&quot;&amp;Id, IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;error24.png&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/INC_ShowEnrollmentMetrics?id=&quot;&amp;Id, IMAGE(&quot;/img/msg_icons/info24.png&quot;, &quot;info24.png&quot;),&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click the icon to display project financial metrics crucial to DTW.  A red exclamation indicates a change in metrics and warrants your attention.  A blue &quot;i&quot; indicates metrics have not changed substantially since the last time this page was acknowledged.</inlineHelpText>
        <label>Application Metrics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending PM Action</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approver 1 Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approver 2 Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approver 3 Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending DTW Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected for Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unenrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Corp Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EstimatedGMAmountGrowthPercent__c</fullName>
        <formula>BaselineGrossMargin__c * (1 + EstimatedGMGrowthPercentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Gross or Net margin amount @ growth % indicated above</inlineHelpText>
        <label>Estimated Margin $ @ Growth %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedGMGrowthPercentage__c</fullName>
        <defaultValue>0.10</defaultValue>
        <inlineHelpText>GM or NM. To estimate an incentive pool for the T&amp;M plan, an increase in Margin must be projected. Default set to 10% estimated growth. Adjust this figure and click save to see changes reflected in the estimated incentive pool.</inlineHelpText>
        <label>Estimated Margin Growth %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EstimatedIncPoolEAC__c</fullName>
        <description>Field populated by a trigger on update of Application or Project record.  Used in the EstimatedIncentivePoolEAC__c field in place of a calculation.</description>
        <label>EstimatedIncPoolEAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIncPoolITD__c</fullName>
        <description>Field populated by a WFR on create of Application.</description>
        <label>EstimatedIncPoolITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIncentivePoolEAC__c</fullName>
        <description>For Fixed Price plan: EAC NSR x (EAC Margin % - Baseline Margin %) x Profit Share % x (1 - % Complete @ Enrollment Adjusted for Change Orders).  For T&amp;M GM plan: (EAC Margin – Baseline Margin) x 5%.  For T&amp;M NM plan: (EAC Margin – Baseline Margin) x 20%.</description>
        <formula>IF(MAX(EstimatedIncPoolEAC__c,0)&gt;  MaxIncentivePool__c, MaxIncentivePool__c,MAX(EstimatedIncPoolEAC__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Fixed Price plan: EAC NSR x (EAC Margin % - Baseline Margin %) x Profit Share % x (1 - % Complete @ Enrollment Adjusted for Change Orders).  For T&amp;M GM plan: (EAC Margin – Baseline Margin) x 5%.  For T&amp;M NM plan: (EAC Margin – Baseline Margin) x 20%.</inlineHelpText>
        <label>Estimated Incentive Pool EAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIncentivePoolITD__c</fullName>
        <description>ITD NSR (Final ITD Gross Margin % - Baseline Gross Margin %) x Profit Share % x (1 - % Complete @ Enrollment Adjusted for Change Orders)</description>
        <formula>EstimatedIncPoolITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ITD NSR (Final ITD Gross Margin % - Baseline Gross Margin %) x Profit Share % x (1 - % Complete @ Enrollment Adjusted for Change Orders)</inlineHelpText>
        <label>Estimated Incentive Pool ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIncentivePool__c</fullName>
        <description>If the current EAC GM % NSR is greater than the threshold, an Estimated Incentive Pool is displayed.  This is a point-in-time estimate based on the PM&apos;s EAC.  Management Adjustments will impact the possible incentive pool for the project.  Future changes to the project&apos;s budget may impact the Deliver to Win Baseline.</description>
        <formula>IF( MAX(0,(0.03*BaselineNSR__c*(1-PercentCompleteCostITD__c))) &lt; 0, 0,
MAX(0,(0.03*BaselineNSR__c*(1-PercentCompleteCostITD__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If current EAC GM % NSR is greater than the threshold, an Estimated Incentive Pool displays; this is a point-in-time estimate based on PM&apos;s EAC. Mgmt Adjustments will impact the possible incentive pool, &amp; changes to the budget may impact the DTW Baseline.</inlineHelpText>
        <label>Estimated Incentive Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedPoolBaseline10__c</fullName>
        <formula>MAX(
 IF( (BaselineGrossMargin__c * 0.10) * (IncentivePlan__r.ProfitSharingPercent__c) &gt; IncentivePlan__r.MaxPoolCap__c, IncentivePlan__r.MaxPoolCap__c,
(BaselineGrossMargin__c * 0.10) * (IncentivePlan__r.ProfitSharingPercent__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as a reference point only, for modeling T&amp;M plan applications.  It is a valuation of the incentive pool that would be available to participants if they were able to grow the project&apos;s baseline margin $ by 10%.</inlineHelpText>
        <label>Sample Pool @ Baseline + 10%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedPoolBaseline__c</fullName>
        <description>Used as a reference point only, for modeling Fixed Price plan applications.  It is a valuation of the incentive pool that would be available to participants if they were able to increase the project&apos;s baseline margin % by 3%.</description>
        <formula>MaxIncentivePool__c /2</formula>
        <inlineHelpText>The sample pool reflects the calculated incentive pool assuming final GM% is 3% above baseline, all operational metrics are achieved and there are no changes to current project scope.</inlineHelpText>
        <label>Sample Pool if Baseline +3%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExceptionComments__c</fullName>
        <inlineHelpText>If there are exceptions listed above, a brief explanation should be provided for the next approver.  Enter one here, then hit save.  The comment will move to the history section below, and you will then be able to advance the form.</inlineHelpText>
        <label>Exception Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionFlag__c</fullName>
        <description>Set if there are any exceptions identified requiring a third tier approver.</description>
        <inlineHelpText>Set if there are any exceptions identified requiring a third tier approver.</inlineHelpText>
        <label>Exception(s)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>